# pupil-management-system

./: .gitignore  README.md  accounts.json  accounts.py  app.py  inputs.py  main.py  menu.py  onboarding.py  pyproject.toml  replit.nix  reports.py  settings.py  students-bootstrap.json  students.json  students.py  terminal_ui.py  tkinter_inputs.py  tkinter_ui.py  ui.py  util.py
tests/: test_json_database.py  test_util.py
