[tool.poetry]
name = "pupil-management-system"
version = "0.2.0"
description = ""
authors = ["RandomSearch <101704343+RandomSearch18@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
bcrypt = "^4.0.1"
colorama = "^0.4.6"
regex = "^2023.10.3"
phonenumbers = "^8.13.22"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
